@@ -31,6 +31,9 @@ class PizzaPrice(models.Model):
     pizza = models.ForeignKey(Pizza, null=False, related_name='prices')
     date = models.fields.DateField()
 
+    def __unicode__(self):
+        return u"%s %s" % (self.pizza, self.date)
+
 
 PIZZA_SIZES = (
     ('s', 'Small'),
@@ -45,6 +48,9 @@ class PizzaSizePrice(models.Model):
 
     class Meta:
         unique_together=[('price', 'size')]
+
+    def __unicode__(self):
+        return u"%s %s : %s" % (dict(PIZZA_SIZES)[self.size], self.price.pizza, self.amount)
 
 
 class Profile(models.Model):
@@ -62,3 +68,6 @@ class Order(models.Model):
 class PizzaCrust(models.Model):
     code = models.fields.CharField(primary_key = True, unique = True, max_length = 3)
     full_name = models.fields.CharField(max_length = 200)
+
+    def __unicode__(self):
+        return self.full_name
